@startuml Combat_System e Character_Evolution Strategy + Observer

'Il Pattern Strategy è utilizzato per modellare le mosse come comportamenti intercambiabili, permettendo al Player di variare dinamicamente il proprio comportamento senza modificare la sua struttura.'
class Player{
    - name: String
    - HP: int
    +learnMove(move: Move): void
}

class Enemy{
    - name: String
    - HP: int
}

interface ActionStrategy{
    + execute(user: Character, target: Character)
}

enum MoveType{
    +createMove(move: Move): ActionStrategy
}

abstract class MoveAction implements ActionStrategy{
    - move: Move
    - combatStrategy: CombatCalculationStrategy
    + execute(user,target)
}

abstract class OffensiveMove extends MoveAction {
    - move: Move
    + execute(user,target)
    + calculateDamage(user,target)
}

class AttackMove extends OffensiveMove {
    - move: Move
    + execute(user,target)
    + calculateDamage(user,target)
}

class HealMove extends MoveAction {
    - move: Move
    + execute(user,target)
}

class MagicAttackMove extends OffensiveMove {
    - move: Move
    + execute(user,target)
    + calculateDamage(user,target)
}

class ItemAction implements ActionStrategy{
    - item: Item
    + execute(user, target)
}

class MoveReader {
    + readMove(String path): List<Move>
}

class MoveRegistry {
    - MoveRegistry instance
    - Map<String, Move> moves
    + getInstance(): MoveRegistry
    + getMoveActionStrategy(String move): ActionStrategy
}

class Action {
    - CharacterPG user
    - List<? extends CharacterPG> targets
    - ActionStrategy actionStrategy
    + execute(): void
}

Player ..> ActionStrategy : uses
Enemy..>ActionStrategy : uses
MoveType..>MoveAction: creates

MoveRegistry ..> MoveReader : uses
MoveRegistry ..> ActionStrategy : creates

Action ..> ActionStrategy : consumes
Battle ..> Action : consumes
@enduml